Added project files

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
-  "homepage": "https://srivastavasanjh123.github.io/HOM",
+  "homepage": "https://srivastavasanjh123.github.io/HOM-Final",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
